--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,6 @@
-This is the home page!
+
+  <div class="starter-template">
+    <h1>Nationbuilder Playground</h1>
+    <p class="lead">These are developer exercises from<br> <a href="http://nationbuilder.com/developer_exercises">http://nationbuilder.com/developer_exercises</a>. Click on one of the menu items for demos.</p>
+  </div>
+
