--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,15 +21,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">NationBuilder Playground</a>
+      <a class="navbar-brand" href="https://github.com/0ranges/nationbuilderplayground">NationBuilder Playground</a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
+        <li><%= link_to 'Home', :controller => 'pages', :action => 'add' %></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">People <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Create Person</a></li>
+            <li><%= link_to 'Create Person', :controller => 'peoples', :action => 'add' %></li>
             <li><a href="#">Update Person</a></li>
             <li><a href="#">Delete Person</a></li>
           </ul>
