--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
 <div class="starter-template">
     <h1>Nationbuilder Playground</h1>
     <p class="lead">These are developer exercises from<br> <a href="http://nationbuilder.com/developer_exercises">http://nationbuilder.com/developer_exercises</a>. Click on one of the menu items for demos. The site is currently running on <%= @host; %>.</p>
+    <p class="lead">Please make sure to authorize this application by visiting <a href="<%= @app_auth_url; %>">This Link</a></p>
 </div>
 
