--- a/app/views/peoples/add.html.erb
+++ b/app/views/peoples/add.html.erb
@@ -45,7 +45,7 @@
     </div>
     <div class="form-group">
       <label for="state">State</label>
-      <select class="form-control" name="state" id="party">
+      <select class="form-control" name="state" id="state">
         <option value="AL">Alabama</option>
         <option value="AK">Alaska</option>
         <option value="AZ">Arizona</option>
@@ -99,7 +99,7 @@
         <option value="WY">Wyoming</option>
       </select>
     </div>
-    <input type="hidden" name="country_code" value="US">
+    <input type="hidden" name="country_code" value="US" id="country_code">
     <button type="submit" class="btn btn-default">Create Person</button>
   </form>
 
