--- a/app/views/peoples/add.html.erb
+++ b/app/views/peoples/add.html.erb
@@ -1,4 +1,8 @@
+
+
 <div class="starter-template">
+  <%=  @re.status;
+  %>
   <h1>Add Person</h1>
 
   <form class="input-form" onsubmit="return create_person();">
