--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">People <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><%= link_to 'Create Person', :controller => 'peoples', :action => 'add' %></li>
-            <li><a href="#">Update Person</a></li>
+            <li><%= link_to 'Update Person', :controller => 'peoples', :action => 'update' %></li>
             <li><a href="#">Delete Person</a></li>
           </ul>
         </li>
