change glyphs to pointer cursor type

--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -279,7 +279,7 @@ th {
   font-style: normal;
   font-weight: normal;
   line-height: 1;
-
+  cursor: pointer;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
