delete call added to peoples_controller, confirm delete added to mainjs, success and failure tests and alerts added

--- a/app/views/peoples/update.html.erb
+++ b/app/views/peoples/update.html.erb
@@ -12,7 +12,7 @@
 
 
 <% @re['results'].each do |person| %>
-      <tr>
+      <tr id="<%= person['id']; %>">
         <td><%= person['first_name'] %></td>
         <td><%= person['last_name'] %></td>
         <td><%= person['email'] %></td>
