--- a/app/views/peoples/update.html.erb
+++ b/app/views/peoples/update.html.erb
@@ -16,7 +16,7 @@
         <td><%= person['first_name'] %></td>
         <td><%= person['last_name'] %></td>
         <td><%= person['email'] %></td>
-        <td><span class="glyphicon glyphicon-pencil" aria-hidden="true" title="Edit Person"></span></td>
+        <td><a href="/peoples/update_person?person_id=<%= person['id']; %>"><span class="glyphicon glyphicon-pencil" aria-hidden="true" title="Edit Person"></span></a></td>
         <td>  <span class="glyphicon glyphicon-remove" aria-hidden="true" title="Delete Person" onclick="return delete_person(<%= person['id']; %>);"></span>
         </td>
       </tr>
