--- a/app/views/peoples/update_person.html.erb
+++ b/app/views/peoples/update_person.html.erb
@@ -26,13 +26,35 @@
         <option value="F" <% if @re['person']['sex'] == 'F' %>
                                 selected="selected"
                               <% end %>
-        %>>Female</option>
+        >Female</option>
       </select>
     </div>
     <div class="form-group">
       <label for="employer">Employer</label>
       <input type="text" class="form-control" name="employer" id="employer" placeholder="Employer" value="<%= @re['person']['employer']; %>">
     </div>
+
+    <input type="hidden" id="hidden_party" value="<%= @re['person']['party']; %>">
+
+    <input type="hidden" id="hidden_state" value="<%= @re['person']['primary_address']['state']; %>">
+
+    <script type="application/javascript">
+
+
+        $( document ).ready(function() {
+
+            var party_value = document.getElementById('hidden_party').value;
+
+            $('#party option[value='+ party_value +']').attr('selected','selected');
+
+            var state_value = document.getElementById('hidden_state').value;
+
+            $('#state option[value='+ state_value +']').attr('selected','selected');
+
+        });
+
+    </script>
+
     <div class="form-group">
       <label for="party">Party</label>
       <select class="form-control" name="party" id="party">
