--- a/app/views/peoples/update_person.html.erb
+++ b/app/views/peoples/update_person.html.erb
@@ -1,5 +1,5 @@
 <div class="starter-template">
-  <h1>Add Person</h1>
+  <h1>Edit: <%= @re['person']['first_name'] + ' ' + @re['person']['last_name']; %></h1>
 
   <form class="input-form" onsubmit="return update_person();">
     <div class="form-group">
