--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,8 +33,14 @@
             <li><%= link_to 'Update Person', :controller => 'peoples', :action => 'update' %></li>
           </ul>
         </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contacts <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><%= link_to 'Log Contact', :controller => 'contacts', :action => 'log_contact' %></li>
+            <li><%= link_to 'View Payloads', :controller => 'contacts', :action => 'show_logs' %></li>
+          </ul>
+        </li>
         <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
