--- a/app/views/contacts/log_contact.html.erb
+++ b/app/views/contacts/log_contact.html.erb
@@ -11,7 +11,6 @@
       <% end %>
       </select>
     </div>
-
     <div class="form-group">
       <label for="senderId">Sender ID</label>
       <input type="text" class="form-control" name="sender_id" id="sender_id" value="1" disabled="disabled">
@@ -26,7 +25,7 @@
         <option value="delivery">Delivery</option>
         <option value="door_knock">Door knock</option>
         <option value="email">Email</option>
-        <option value="email_blast">Email</option>
+        <option value="email_blast">Email blast</option>
         <option value="face_to_face">Face to face</option>
         <option value="facebook">Facebook</option>
         <option value="meeting">Meeting</option>
@@ -64,10 +63,10 @@
         <option value="6">Volunteer recruitment</option>
       </select>
     </div>
-
-
-
-
+    <div class="form-group">
+      <label for="note">Note</label>
+      <input type="text" class="form-control" name="note" id="note" placeholder="Enter note...">
+    </div>
     <button type="submit" class="btn btn-default">Create Person</button>
   </form>
 
