add about page, change text on home page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
             <li><%= link_to 'View Payloads', :controller => 'contacts', :action => 'show_logs' %></li>
           </ul>
         </li>
-        <li><a href="#about">About</a></li>
+        <li><%= link_to 'About', :controller => 'pages', :action => 'about' %></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
