--- a/app/views/contacts/log_contact.html.erb
+++ b/app/views/contacts/log_contact.html.erb
@@ -67,7 +67,7 @@
       <label for="note">Note</label>
       <input type="text" class="form-control" name="note" id="note" placeholder="Enter note...">
     </div>
-    <button type="submit" class="btn btn-default">Create Person</button>
+    <button type="submit" class="btn btn-default">Log Contact</button>
   </form>
 
 
