--- a/app/views/peoples/update_person.html.erb
+++ b/app/views/peoples/update_person.html.erb
@@ -112,7 +112,7 @@
     </div>
     <input type="hidden" name="country_code" value="US" id="country_code">
     <input type="hidden" name="person_id" value="<%= @re['person']['id']; %>" id="person_id">
-    <button type="submit" class="btn btn-default">Create Person</button>
+    <button type="submit" class="btn btn-default">Update Person</button>
   </form>
 
 
